--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&family=Josefin+Sans:wght@300;400;500;600;700&display=swap");
 
 :root {
-  --c-primary: #83a623;
-  --c-light: #357f9c;
+  --c-primary: #769c0e;
+  --c-light: #4c6f81;
   --c-dark: #213744;
   --c-black: #13171a;
   --c-white: #fdfefe;
@@ -30,14 +30,24 @@ button {
   cursor: pointer;
 }
 
+a {
+  text-decoration: initial;
+}
+
 .container {
-  min-width: 800px;
-  max-width: 900px;
+  min-width: 40rem;
+  max-width: 55rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 2rem;
   margin-inline: auto;
+  box-shadow: 2px 2px 8px var(--c-shadow);
+  border-radius: 1rem;
 }
 
 .cta-btn {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   text-transform: uppercase;
   padding: 0.5em 1rem;
   border-radius: 0.25rem;
@@ -60,9 +70,9 @@ button {
 .input-group {
   display: flex;
   gap: 1rem;
-}
 
-.input-group > * {
-  flex-grow: 1;
-  flex-basis: 0;
+  * {
+    flex-grow: 1;
+    flex-basis: 0;
+  }
 }
