--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -86,7 +86,7 @@ input {
   display: flex;
   gap: 1rem;
 
-  * {
+  & > * {
     flex-grow: 1;
     flex-basis: 0;
   }
@@ -105,4 +105,11 @@ input {
   display: grid;
   gap: 1rem;
   overflow: auto;
+}
+
+.small-circle {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  margin-inline: auto;
 }
