WIP: Refactoring code

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -1,499 +1,41 @@
-/* RADIO SELECTOR */
-
-.radio-selector {
-  position: relative;
-
-  .field {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-  }
-
-  input {
-    opacity: 0;
-    position: absolute;
-  }
-
-  .option {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    text-transform: capitalize;
-    font-size: 1.25rem;
-    height: 3rem;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    position: relative;
-    border: 1px solid var(--c-primary-dark);
-    background-color: var(--c-white);
-    cursor: pointer;
-    white-space: nowrap;
-  }
-
-  input:checked + .option {
-    background-color: var(--c-primary-dark);
-    color: var(--c-white);
-  }
-
-  input:focus + .option {
-    outline: 2px solid var(--c-primary-light);
-    border-color: var(--c-primary-light);
-  }
-
-  .title.invalid {
-    color: var(--c-error);
-  }
-
-  .option.invalid {
-    outline: 2px solid var(--c-error);
-    border-color: var(--c-error);
-    color: var(--c-error);
-  }
-}
-
-/* LANGUAGE SELECTOR */
-
-.language-selector {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  direction: ltr;
-
-  .element {
-    width: 2.25rem;
-    height: 2.25rem;
-    background-color: var(--c-shadow-dark);
-    border-radius: 0.25rem;
-    font-weight: 600;
-    color: var(--c-white);
-
-    &.selected {
-      background-color: var(--c-success);
-      box-shadow: 2px 2px 8px var(--c-shadow);
-    }
-
-    &.ar {
-      padding-bottom: 0.4rem;
-    }
-  }
-}
-
-/* TEXT INPUT */
-.input-field {
-  .field {
-    width: 100%;
-    height: 3rem;
-    padding: 0.5rem;
-    font-size: 1rem;
-    border: 1px solid var(--c-primary-dark);
-    border-radius: 0.25rem;
-  }
-
-  .field:focus {
-    outline: 2px solid var(--c-primary-light);
-    border-color: var(--c-primary-light);
-  }
-
-  .title.invalid {
-    color: var(--c-error);
-  }
-
-  .field.invalid {
-    outline: 2px solid var(--c-error);
-    border-color: var(--c-error);
-  }
-}
-
-/* SIDE BAR */
-
-.side-bar {
-  height: 100vh;
-  min-height: 40rem;
-  width: 6rem;
-  padding: 3rem 1rem;
-  background-color: var(--c-primary-dark);
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: stretch;
-  transition: width 200ms ease-in-out;
-  z-index: 1;
-
-  &[dir="ltr"] {
-    right: none;
-    left: 0;
-  }
-
-  &[dir="rtl"] {
-    right: 0;
-    left: none;
-  }
-
-  &:hover {
-    width: 12rem;
-    transition: width 200ms ease-in-out;
-
-    .expanded {
-      display: block;
-    }
-
-    .shrunk {
-      display: none;
-    }
-
-    .settings-section {
-      .language-selector {
-        .element {
-          display: block;
-        }
-      }
-
-      .sign-out {
-        opacity: 100%;
-        transition-delay: 100ms;
-      }
-    }
-  }
-
-  .expanded {
-    display: none;
-  }
-
-  .shrunk {
-    display: block;
-  }
-
-  .nav-section {
-    display: flex;
-    gap: 1rem;
-    flex-direction: column;
-
-    .element {
-      width: 100%;
-      height: 4rem;
-      padding: 0.5rem;
-      border-radius: 0.5rem;
-      background-color: var(--c-primary-dark);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-transform: capitalize;
-
-      &:focus {
-        outline: none;
-        background-color: var(--c-shadow-light);
-      }
-
-      &:hover {
-        background-color: var(--c-shadow-light);
-      }
-
-      &.selected {
-        background-color: var(--c-white);
-        font-weight: 600;
-
-        h3 {
-          color: var(--c-primary-dark);
-        }
-
-        svg {
-          fill: var(--c-primary-dark);
-          stroke: var(--c-primary-dark);
-        }
-      }
-
-      h3 {
-        color: var(--c-white);
-        font-size: 1.5rem;
-      }
-
-      svg {
-        width: 2.5rem;
-        height: 2.5rem;
-        fill: var(--c-white);
-        stroke: var(--c-white);
-      }
-    }
-  }
-
-  .settings-section {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-
-    .language-selector {
-      .element {
-        display: none;
-
-        &.selected {
-          display: block;
-        }
-      }
-    }
-
-    .sign-out {
-      height: 2.25rem;
-      background-color: var(--c-error);
-      color: var(--c-white);
-      text-transform: uppercase;
-      border-radius: 0.25rem;
-      opacity: 0;
-    }
-  }
-}
-
-/* TABS */
-
-.tabs {
-  min-width: 50rem;
-  height: 3rem;
-  padding: 0.5rem 1rem 0.25rem;
-  background-color: var(--c-primary);
-  position: sticky;
-  top: 0;
-  display: flex;
-  gap: 0.25rem;
-
-  .element {
-    flex-grow: 1;
-    flex-basis: 0;
-    max-width: 15rem;
-    padding: 0.5rem 1rem;
-    border-radius: 4px 4px 0 0;
-    background-color: var(--c-shadow);
-    text-align: start;
-    text-transform: capitalize;
-
-    &:focus {
-      outline: 0;
-    }
-
-    &.selected {
-      position: relative;
-      height: 2.75rem;
-      bottom: 0.25rem;
-      border-radius: 6px 6px 0 0;
-      background-color: var(--c-white);
-
-      .title {
-        color: var(--c-black);
-      }
-    }
-
-    .title {
-      font-size: 1rem;
-      color: var(--c-white);
-      white-space: nowrap;
-      overflow-x: hidden;
-      text-overflow: ellipsis;
-    }
-  }
-
-  .actions {
-    min-width: 6rem;
-    display: flex;
-    gap: 0.5rem;
-    padding-inline-end: 0.75rem;
-    justify-content: flex-start;
-
-    .add-resource {
-      --c-main: var(--c-white);
-
-      width: 2.25rem;
-      font-size: 2rem;
-      font-weight: 400;
-      color: var(--c-main);
-      background-color: transparent;
-      border: 2px solid var(--c-main);
-      border-radius: 0.25rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition-duration: 200ms;
-      transition-property: background-color, color;
-
-      &:hover {
-        background-color: var(--c-main);
-        color: var(--c-primary);
-
-        transition-duration: 200ms;
-        transition-property: background-color, color;
-      }
-    }
-  }
-}
-
 /* STUDENT FORM */
 
-.student-form {
+.StudentForm {
   margin-inline: auto;
 
   .submit-btn {
     background-color: var(--c-success);
     color: var(--c-white);
-  }
 
-  .submit-btn:disabled {
-    opacity: 30%;
-    cursor: not-allowed;
-  }
-}
+    &:disabled {
+      background-color: var(--c-shadow);
+      cursor: not-allowed;
 
-/* TABLE */
-
-.table {
-  width: 100%;
-  border-collapse: collapse;
-
-  th,
-  td {
-    padding: 0.75rem 1.5rem;
-
-    &.prefix {
-      padding-inline: 0.5rem;
-    }
-
-    &.fit {
-      width: 1%;
-      white-space: nowrap;
-    }
-
-    &.clip {
-      overflow-x: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-
-    &:last-child {
-      padding-inline-end: 0.5rem;
-    }
-  }
-
-  .prefix + th,
-  .prefix + td {
-    padding-inline-start: 0.5rem;
-  }
-
-  thead {
-    tr {
-      border-bottom: 1px solid var(--c-shadow-dark);
-
-      th {
-        text-align: start;
-        text-transform: capitalize;
-        font-weight: bold;
-
-        &.prefix {
-          &:hover {
-            background-color: inherit;
-          }
-        }
-
-        &:hover {
-          background-color: var(--c-shadow-light);
-        }
-      }
-    }
-  }
-
-  tbody {
-    tr {
-      border-bottom: 1px solid var(--c-shadow);
-
-      &:hover {
-        background-color: var(--c-shadow-light);
-      }
-
-      td {
-        &.phone-number {
-          direction: ltr;
-        }
-
-        &.name {
-          text-transform: capitalize;
-        }
-
-        &.prefix {
-          color: var(--c-shadow-dark);
-        }
+      &.submitting {
+        background-color: var(--c-success-light);
+        cursor: default;
       }
     }
   }
 }
 
-/* DROPDOWN MENU */
+/* CUSTOMER FORM */
 
-.dropdown-menu {
-  position: relative;
+.CustomerForm {
+  margin-inline: auto;
 
-  .menu {
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    background-color: var(--c-white);
-    box-shadow: 2px 2px 8px var(--c-shadow);
-    list-style-type: none;
-    position: absolute;
-    top: 100%;
-    z-index: 2;
+  .submit-btn {
+    background-color: var(--c-success);
+    color: var(--c-white);
 
-    .element {
-      height: 2.5rem;
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-      padding-inline: 1.25rem;
-      border-radius: 0.25rem;
-      cursor: pointer;
+    &:disabled {
+      background-color: var(--c-shadow);
+      cursor: not-allowed;
 
-      &:hover {
-        background-color: var(--c-shadow-light);
+      &.submitting {
+        background-color: var(--c-success-light);
+        cursor: default;
       }
     }
-  }
-}
-
-/* COUNTRY SELECTOR */
-
-.country-selector {
-  .menu {
-    width: 25rem;
-    max-height: 30rem;
-    overflow-y: auto;
-    overflow-x: hidden;
-    overscroll-behavior: contain;
-
-    .flag {
-      width: 1.75rem;
-      max-width: 1.75rem;
-    }
-
-    .info {
-      display: flex;
-      gap: 0.5rem;
-      align-items: center;
-      justify-content: flex-start;
-
-      .name {
-        white-space: nowrap;
-        overflow-x: hidden;
-        text-overflow: ellipsis;
-      }
-    }
-  }
-}
-
-/* GOVERNORATE SELECTOR */
-
-.governorate-selector {
-  .menu {
-    width: 25rem;
-    max-height: 30rem;
-    overflow-y: auto;
-    overflow-x: hidden;
-    overscroll-behavior: contain;
   }
 }
