--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,8 @@
   --c-primary-light: #add1eb;
   --c-primary-dark: #1c374a;
   --c-success: #84ad13;
-  --c-success-dark: #405506;
-  --c-success-light: #b9d370;
+  --c-success-dark: #4a6109;
+  --c-success-light: #e2f1bc;
   --c-error: #e04024;
   --c-error-dark: #672013;
   --c-error-light: #df988b;
