--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -1,49 +1,3 @@
-/* ENTRANCE */
-
-.entrance {
-  width: 100vw;
-  min-width: 50rem;
-  height: 100vh;
-  padding: 6rem;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  background-size: cover;
-  background-position: center;
-
-  .google-sign-in {
-    background-color: var(--c-white);
-  }
-}
-
-/* NEW STUDENT */
-
-.new-student {
-  position: relative;
-
-  .banner {
-    width: 100%;
-    max-height: 25rem;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  .student-form {
-    margin-inline: auto;
-    margin-block: 3rem;
-  }
-}
-
-.entrance,
-.new-student {
-  .language-selector {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-  }
-}
-
 /* HOME */
 
 .home {
@@ -53,7 +7,7 @@
 /* STUDENTS */
 
 .students {
-  .student-form {
+  .StudentForm {
     margin-inline: auto;
     margin-block: 3rem;
   }
