--- a/src/components/CountrySelector/style.scss
+++ b/src/components/CountrySelector/style.scss
@@ -8,18 +8,14 @@
     overflow-x: hidden;
     overscroll-behavior: contain;
 
-    .flag {
-      width: 1.75rem;
-      max-width: 1.75rem;
-    }
-
     .info {
       display: flex;
-      gap: 0.5rem;
+      gap: 0.75rem;
       align-items: center;
       justify-content: flex-start;
 
       .name {
+        max-width: 300px;
         white-space: nowrap;
         overflow-x: hidden;
         text-overflow: ellipsis;
