Added and styled missing fields to student form

--- a/src/components/DropdownMenu/style.scss
+++ b/src/components/DropdownMenu/style.scss
@@ -13,6 +13,11 @@
     top: 100%;
     z-index: 2;
 
+    max-height: 30rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+    overscroll-behavior: contain;
+
     .element {
       height: 2.5rem;
       display: flex;
