--- a/src/components/Tabs/style.scss
+++ b/src/components/Tabs/style.scss
@@ -52,7 +52,7 @@
     padding-inline-end: 0.75rem;
     justify-content: flex-start;
 
-    .add-resource {
+    .addResource {
       --c-main: var(--c-white);
 
       width: 2.25rem;
