--- a/src/pages/Admin/SignUp/style.scss
+++ b/src/pages/Admin/SignUp/style.scss
@@ -12,7 +12,7 @@
   background-size: cover;
   background-position: center;
 
-  .google-sign-in {
+  .googleSignIn {
     background-color: var(--c-white);
   }
 }
