--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -3,7 +3,7 @@
 .StudentForm {
   margin-inline: auto;
 
-  .submit-btn {
+  .submitBtn {
     background-color: var(--c-success);
     color: var(--c-white);
 
@@ -24,7 +24,7 @@
 .CustomerForm {
   margin-inline: auto;
 
-  .submit-btn {
+  .submitBtn {
     background-color: var(--c-success);
     color: var(--c-white);
 
