--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,7 +49,7 @@ input {
   border-radius: 1rem;
 }
 
-.cta-btn {
+.ctaBtn {
   font-size: 1.75rem;
   text-transform: uppercase;
   padding: 0.5em 1rem;
@@ -70,7 +70,7 @@ input {
   margin-top: 0.5rem;
 }
 
-.input-group {
+.inputGroup {
   display: flex;
   gap: 1rem;
 
@@ -92,14 +92,14 @@ input {
   background-color: palevioletred;
 }
 
-.main-section {
+.mainSection {
   padding: 3rem;
   display: grid;
   gap: 1rem;
   overflow: auto;
 }
 
-.small-circle {
+.smallCircle {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
