--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,7 +19,7 @@
   --c-unknown: #3f44472d;
   --c-unknown-text: #13171a88;
   --c-canceled: #e04024;
-  --c-active: #84ad13;
+  --c-active: #53a307;
   --c-pending: #9023bb;
   --c-finished: #227aff;
   --c-postponed: #d3b300;
